--- a/doc/Memoria/essential/bibliografía.tex
+++ b/doc/Memoria/essential/bibliografía.tex
@@ -5,12 +5,6 @@
 	\addcontentsline{toc}{chapter}{Referencias bibliográficas}
 	\rule{15cm}{0pt} \\
 \end{center}
-\par Para la elaboración de este proyecto de prácticas he hecho uso del material disponible en la página de la asignatura en el aula viertual que incluye todos los boletines y los vídeos explicativos de las sesiones de prácticas y teoría en la sección ``Contenidos''.
-\par Por último, he consultado las siguientes páginas de la web de \texttt{Cisco} por complementar información:
-\begin{enumerate}
-	\item Cisco. (28 de Enero de 2008). Sample Configuration of Triggered Extensions to RIP. Recuperado de 
-	\raggedright\url{https://www.cisco.com/c/en/us/support/docs/ip/routing-information-protocol-rip/13720-51.html}
-	\item Cisco. Networking Academy. Cisco Packet Tracer. Recuperado de 
-	\url{https://www.netacad.com/es/courses/packet-tracer}
-\end{enumerate}
+\par Para la elaboración de este proyecto de prácticas hemos hecho uso del material disponible en la página de la asignatura en el aula virtual que incluye todas las transparencias y los vídeos explicativos de las sesiones de prácticas en la sección ``\texttt{Contenidos}''.
+
 
