--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer4.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer4.tex
@@ -5,11 +5,129 @@
     signatura: \texttt{int freemem(int type)}.
 \end{ejer}
 \subsection{Desarrollo}
-\begin{listing}
-@@
-\end{listing}
-\subsection{Ficheros de prueba}
 
+\subsubsection{xv6/syscall.h}
+\begin{listing}
+@@ -23,2 +23,3 @@
+    #define SYS_date   22
+    #define SYS_dup2   23
++   #define SYS_freemem 24
+\end{listing}
+
+\subsubsection{xv6/usys.S}
+\begin{listing}
+    SYSCALL(uptime)
+    SYSCALL(date)
+    SYSCALL(dup2)
++   SYSCALL(freemem)
+\end{listing}
+
+\subsubsection{xv6/user.h}
+\begin{listing}
+@@ -3,6 +3,9 @@
+    #define WIFSIGNALED(status) (((status) & 0x7f) != 0)
+    #define WEXITTRAP(status)   (((status) & 0x7f)-1)
+
++   #define F_PAGES 0
++   #define F_BYTES 1
+@@ -44,6 +47,7 @@ 
+// system calls
+    extern int uptime(void);
+    extern int date(struct rtcdate*);
+    extern int dup2(int, int);
++   extern int freemem(int);
+\end{listing}
+
+\subsubsection{xv6/syscall.c}
+\begin{listing}
+@@ -105,6 +105,7 @@
+    extern int sys_uptime(void);
+    extern int sys_date(void);
+    extern int sys_dup2(void);
++   extern int sys_freemem(void);
+@@ -130,6 +131,7 @@ static int (*syscalls[])(void) = {
+    [SYS_close]   sys_close,
+    [SYS_date]    sys_date,
+    [SYS_dup2]    sys_dup2,
++   [SYS_freemem] sys_freemem,
+    };
+\end{listing}
+
+\subsubsection{xv6/sysproc.c}
+\begin{listing}
+@@ -85,1 +85,15 @@ int
++   int 
++   sys_freemem (void)
++   {
++       int type;
++       if(argint(0, &type) < 0)
++       {
++           return -1;
++       }
++       if(type == 0)
++       {
++           return getNumFreePages();
++       }
++       return (getNumFreePages()*PGSIZE);
++   }
+\end{listing}
+
+\subsubsection{xv6/defs.h}
+\begin{listing}
+@@ -68,6 +68,7 @@ 
+// kalloc.c
+    void            kfree(char*);
+    void            kinit1(void*, void*);
+    void            kinit2(void*, void*);
++   int             getNumFreePages(void);
+@@ -187,6 +187,7 @@
+// vm.c
+    void clearpteu(pde_t *pgdir, char *uva);
++   int mappages(pde_t *pgdir, void *va, uint size, uint pa, int perm);
+\end{listing}
+
+\subsubsection{xv6/kalloc.c}
+\begin{listing}
+@@ -21,6 +21,7 @@ struct {
+    struct spinlock lock;
+    int use_lock;
+    struct run *freelist;
++   int num_free;
+} kmem;
+@@ -72,6 +73,7 @@ kfree(char *v)
+    r = (struct run*)v;
+    r->next = kmem.freelist;
+    kmem.freelist = r;
++   kmem.num_free++;
+    if(kmem.use_lock)
+        release(&kmem.lock);
+}
+@@ -88,9 +90,17 @@ kalloc(void)
+    r = kmem.freelist;
+    if(r)
++   {
+        kmem.freelist = r->next;
++       kmem.num_free--;
++   }
+    if(kmem.use_lock)
+    release(&kmem.lock);
+    return (char*)r;
+    }
++   int
++   getNumFreePages()
++   {
++       return kmem.num_free;
++   }
+\end{listing}
+
+
+\subsection{Ficheros de prueba}
+\begin{listing}
+@@ -194,6 +194,7 @@ UPROGS=\
+    _tsbrk4\
+    _tsbrk5\
++   _tfreem\
+\end{listing}
 \subsubsection{Salida del fichero prueba}
 \begin{listing}[style=consola]
     $ tfreem
