doc: indice en azul

--- a/doc/Memoria/essential/preambulo.tex
+++ b/doc/Memoria/essential/preambulo.tex
@@ -39,7 +39,7 @@
 
 %hipervínculos, referencias, citas, etc
 \usepackage[colorlinks=true, 
-		    linkcolor=magenta, 
+		    linkcolor=blue, 
 		    citecolor = black,
 		    urlcolor = blue]{hyperref}
 
