--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer2.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer2.tex
@@ -1,7 +1,9 @@
+%%%%%%%%%%%%%%%%%%%%%% SISTEMA DE MEMORIA - EJERCICIO 2 %%%%%%%%%%%%%%%%%%%%%%
 \section{Ejercicio 2}
+
 \subsection{Enunciado}
 \begin{ejer}
-    \textbf{2.[trap]} Modifica el código del primer ejercicio para que contemple estas situaciones:
+    \textbf{2.[sbrk()]} Modifica el código del primer ejercicio para que contemple estas situaciones:
     \begin{itemize}
         \item El caso de un argumento negativo al llamarse a \texttt{sbrk()}.
         \item Manejar el caso de fallos en la página inválida debajo de la pila.
@@ -12,14 +14,164 @@
     \end{itemize}
 \end{ejer}
 \subsection{Desarrollo}
+\subsubsection{xv6/trap.c}
 \begin{listing}
-@@
+    @@ -79,31 +79,34 @@ trap(struct trapframe *tf)
+    case T_PGFLT:
+    {
++       if (!(tf->err & 1) && !(rcr2() > myproc()->sz)) { 
 \end{listing}
+
+\subsubsection{xv6/sysproc.c}
+\begin{listing}
+@@ -52,18 +52,32 @@ sys_sbrk(void)
+    int
+    sys_sbrk(void)
+    {
+-       int addr;
+-       int n; 
++       int n, sz;
++       struct proc *curproc = myproc();
+        if(argint(0, &n) < 0)
+            return -1;
+-       addr = myproc()->sz +=n;
+-       myproc()->sz += n;
++       sz = curproc->sz;
++       if(n>=0)
++       {
++           if((sz+n) >= KERNBASE)
++               return -1;
++           curproc->sz = sz+n;
++       }
++       else // argumento negativo
++       {
++           if((curproc->sz = deallocuvm(curproc->pgdir, sz, sz + n)) == 0)
++               return -1;
++       }
++       lcr3(V2P(curproc->pgdir)); // Invalidate TLB.
+-       if(growproc(n) < 0)
+-           return -1;
+-       return addr;
++       return sz; // retornamos el anterior tam
+    }
+\end{listing}
+\par Añadimos el caso de un argumento negativo al llamarse a \texttt{sbrk()}
+\par TODO: Manejar el caso de fallos en la página inválida debajo de la pila.
+\par TODO: Asegurarse de que funciona el uso por parte del kernel de páginas de 
+usuario que todavía no han sido reservadas (p.e. si un programa pasa una dirección 
+de la zona de usuario todavía no reservada a \texttt{read()}).
+
+\subsubsection{xv6/vm.c}
+\begin{listing}
+@@ -323,10 +323,10 @@ copyuvm(pde_t *pgdir, uint sz)
+    for(i = 0; i < sz; i += PGSIZE){
+        if((pte = walkpgdir(pgdir, (void *) i, 0)) == 0)
+-           panic("copyuvm: pte should exist");
++           continue;
+        if(!(*pte & PTE_P))
+-           panic("copyuvm: page not present");
++           continue;
+\end{listing}
+\par Para que \texttt{fork()} y \texttt{exit()/wait()} funcionen en el caso de que 
+haya direcciones virtuales sin memoria reservada para ellas.
 
 \subsection{Ficheros de prueba}
 \subsubsection{Fichero sbrk.c}
+\subsubsection{xv6/Makefile}
+\begin{listing}
+@@ -189,6 +189,11 @@ UPROGS=\
+    _dup2test\
+    _exitwait\
++   _tsbrk1\
++   _tsbrk2\
++   _tsbrk3\
++   _tsbrk4\
++   _tsbrk5\
+\end{listing}
+
+\subsubsection{Salida de los ficheros prueba}
 \subsubsection{Salida del fichero prueba}
 \begin{listing}[style=consola]
-$:
+    $ tsbrk1
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    pid 3 tsbrk1: trap 14 err 6 on cpu 0 eip 0x23 addr 0x31f4--kill proc
+    pid 3 tsbrk1: trap 14 err 4 on cpu 0 eip 0xb9 addr 0x31f4--kill proc
+    Debe imprimir 1: 1.
+    Output code: 0
 \end{listing}
-\subsubsection{Ejecución de tuberías}
+\begin{listing}[style=consola]
+    $ tsbrk2
+    pid 4 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 4 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    .........................................................................................c
+    Output code: 14
+\end{listing}
+\begin{listing}[style=consola]
+    $ tsbrk3
+    pid 5 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 5 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    pid 5 tsbrk3: trap 14 err 2 on cpu 0 eip 0x8010404f addr 0x5000--kill proc
+    Debe imprimir los 50 primeros caracteres de README:
+    xv6 is a re-implementation of Dennis Ritchie's and
+    Output code: 0
+\end{listing}
+\begin{listing}[style=consola]
+    $ tsbrk4
+    pid 6 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 6 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    pid 6 tsbrk4: trap 14 err 6 on cpu 0 eip 0x28 addr 0x31f4--kill proc
+    pid 6 tsbrk4: trap 14 err 4 on cpu 0 eip 0xbe addr 0x31f4--kill proc
+    Debe imprimir 1: 1.
+    pid 7 tsbrk4: trap 14 err 6 on cpu 0 eip 0x28 addr 0x31f4--kill proc
+    pid 7 tsbrk4: trap 14 err 4 on cpu 0 eip 0xbe addr 0x31f4--kill proc
+    Debe imprimir 1: 1.
+    pid 7 tsbrk4: trap 14 err 6 on cpu 0 eip 0x100 addr 0x4b3000--kill proc
+    pid 7 tsbrk4: trap 14 err 4 on cpu 0 eip 0x11f addr 0x4b3000--kill proc
+    Debe imprimir 1: pid 8 tsbrk4: trap 14 err 6 on cpu 0 eip 0x100 addr 0x4b3000--kill proc
+    pid 8 tsbrk4: trap 14 err 4 on cpu 0 eip 0x11f addr 0x4b3000--kill proc
+    Debe imprimir 1: 1.
+    pid 6 tsbrk4: trap 14 err 6 on cpu 0 eip 0x100 addr 0x4b3000--kill proc
+    1pid 9 tsbrk4: trap 14 err 6 on cpu 0 eip 0x100 addr 0x4b3000--kill proc
+    pid 9 tsbrk4: trap 14 err 4 on cpu 0 eip 0x11f addr 0x4b3000--kill proc
+    pid 6 tsbrk4: trap 14 err 4 on cpu 0 eip 0x11f addr 0x4b3000--kill proc
+    .
+    DeDebe impribe impzombie!
+    mir 1:rimir 1: 1.
+    1.
+    zombie!
+    Output code: 0
+    zombie!
+\end{listing}
+\begin{listing}[style=consola]
+    $ tsbrk5
+    pid 10 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 10 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    Este programa primero intenta acceder mas alla de sz.
+    Debe fallar ahora:
+    pid 10 tsbrk5: trap 14 err 6 on cpu 0 eip 0x23 addr 0x3001--kill proc
+    Output code: 14
+\end{listing}
+\begin{listing}[style=consola]
+    $ tsbrk5
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    Este programa primero intenta acceder mas alla de sz.
+    Si no fallo antes (mal), ahora tambien debe fallar:
+    6687
+    Output code: 0
+\end{listing}
+\begin{listing}[style=consola]
+    $ tsbrk5
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0xfa5 addr 0x5004--kill proc
+    pid 3 sh: trap 14 err 6 on cpu 0 eip 0x101c addr 0xcfa4--kill proc
+    Este programa primero intenta acceder mas alla de sz.
+    Si no fallo antes (mal), ahora tambien debe fallar:
+    pid 3 tsbrk5: trap 14 err 7 on cpu 0 eip 0x7b addr 0x80000002--kill proc
+    Output code: 14
+\end{listing}
+
+\subsubsection{Ejecución de tuberías \texttt{ls | wc}}
+\begin{listing}[style=consola]
+    $:
+\end{listing}
