--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer1.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer1.tex
@@ -85,9 +85,34 @@ fichero \texttt{trap.c}.
 \subsection{Pruebas}
 \subsubsection{Comando \texttt{echo}}
 \begin{listing}[style=consola]
-    $ 
+    $ echo De ASO no paso, necesito un repaso.
+    De ASO no paso, necesito un repaso.
+    Output code: 0
 \end{listing}
 \subsubsection{Comando \texttt{ls}}
 \begin{listing}[style=consola]
-    $ 
+    $ ls
+    .              1 1 512
+    ..             1 1 512
+    README         2 2 2327
+    cat            2 3 3072
+    echo           2 4 2772
+    forktest       2 5 1944
+    grep           2 6 3624
+    init           2 7 3052
+    kill           2 8 2800
+    ln             2 9 2812
+    ls             2 10 3604
+    mkdir          2 11 2856
+    rm             2 12 2848
+    sh             2 13 6396
+    stressfs       2 14 3008
+    usertests      2 15 25596
+    wc             2 16 3176
+    zombie         2 17 2716
+    date           2 18 2836
+    clear          2 19 2712
+    dup2test       2 20 4228
+    exitwait       2 21 3224
+    Output code: 0
 \end{listing}
