--- a/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer1.tex
+++ b/doc/Memoria/codigofuente/sistemaMemoria/ejercicios/ejer1.tex
@@ -59,14 +59,8 @@ Devuelve el tamaño antiguo, pero no reserva memoria.
     //PAGEBREAK: 13
     default:
         if(myproc() == 0 || (tf->cs&3) ==0){
-        // In user space, assume process misbehaved.
-        cprintf("pid %d %s: trap %d err %d on cpu %d "
-                "eip 0x%x addr 0x%x--kill proc\n",
-                myproc()->pid, myproc()->name, tf->trapno,
-                tf->err, cpuid(), tf->eip, rcr2());
-        // In kernel, it must be our mistake.
-        cprintf("unexpected trap %d from cpu %d eip %x (cr2=0x%x)\n",
-                tf->trapno, cpuid(), tf->eip, rcr2());
+            // In kernel, it must be our mistake.
+            cprintf("unexpected trap %d from cpu %d eip %x (cr2=0x%x)\n", tf->trapno, cpuid(), tf->eip, rcr2());
 \end{listing}
 \par Modificamos el código en \texttt{trap.c} para responder a un fallo de página en 
 el espacio de usuario mapeando una nueva página física en la dirección que generó el fallo,
